--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         </div>
         <nav>
             <ul>
-              <li><a href="#">HOME</a></li>
+              <li><a href="index.html">HOME</a></li>
               <li class="separator">|</li>
-              <li><a href="#"><span>Personal Info</span></a></li>
+              <li><a href="personal-info.html"><span>Personal Info</span></a></li>
               <li><a href="#"><span>Education</span></a></li>
               <li><a href="#"><span>Achievement</span></a></li>
               <li><a href="#"><span>About Me</span></a></li>
