--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
               <li><a href="index.html">HOME</a></li>
               <li class="separator">|</li>
               <li><a href="personal-info.html"><span>Personal Info</span></a></li>
-              <li><a href="#"><span>Education</span></a></li>
-              <li><a href="#"><span>Achievement</span></a></li>
-              <li><a href="#"><span>About Me</span></a></li>
+              <li><a href="education.html"><span>Education</span></a></li>
+              <li><a href="achievement.html"><span>Achievement</span></a></li>
+              <li><a href="about-me.html"><span>About Me</span></a></li>
             </ul>
           </nav>
         <div class="img">
