--- a/personal-info.html
+++ b/personal-info.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Celestial</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="pi-style.css">
 </head>
 <body>
     <div class ="container">
@@ -25,9 +25,6 @@
               <li><a href="about-me.html"><span>About Me</span></a></li>
             </ul>
           </nav>
-        <div class="img">
-            <img src="IMG_6470.jpeg">
-        </div>
         <div class="description">
             <p>Aerospace Engineering, showcase innovative solutions that drive
                 the future of flight and space exploration into the uncharted tarritory
