--- a/achievement.html
+++ b/achievement.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Celestial</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="achie.css">
 </head>
 <body>
     <div class ="container">
@@ -25,14 +25,13 @@
               <li><a href="about-me.html"><span>About Me</span></a></li>
             </ul>
           </nav>
-        <div class="img">
-            <img src="IMG_6470.jpeg">
-        </div>
-        <div class="description">
-            <p>Aerospace Engineering, showcase innovative solutions that drive
-                the future of flight and space exploration into the uncharted tarritory
-                where the possibility is enless</p>
-        </div>
+          <div class="card">
+            <img src="img_avatar.png" alt="Avatar" style="width:100%">
+            <div class="ci">
+              <h4><b>John Doe</b></h4> 
+              <p>Architect & Engineer</p> 
+            </div>
+          </div>
     </div>
 
 </body>
