ADD LOTS OF FEATURE!!!

--- a/personal-info.html
+++ b/personal-info.html
@@ -25,12 +25,36 @@
               <li><a href="about-me.html"><span>About Me</span></a></li>
             </ul>
           </nav>
-        <div class="description">
-            <p>Aerospace Engineering, showcase innovative solutions that drive
-                the future of flight and space exploration into the uncharted tarritory
-                where the possibility is enless</p>
+        <div class="about-me">
+            <div class="about-me-text">
+              <span class="typed-text">Age - 15</span>
+            </div>
+          </div>
+        <div class="about-me">
+            <div class="about-me-text2">
+              <span class="typed-text">Birthdate - 6th of August 2009</span>
+            </div>      
         </div>
-    </div>
+        <div class="about-me">
+            <div class="about-me-text3">
+              <span class="typed-text">Adress - Lives in 19/29 Banbung Bangung Chonburi 20170</span>
+            </div>
+          </div>
+          <div class="about-me">
+            <div class="about-me-text4">
+              <span class="typed-text">Phone number - 0988488564</span>
+            </div>
+          </div>
+          <div class="about-me">
+            <div class="about-me-text5">
+              <span class="typed-text">Email - pongsapatsiriphok@gmail.com</span>
+            </div>
+          </div>
+          <div class="about-me">
+            <div class="about-me-text6">
+              <span class="typed-text">Studies at - Chonradsadornumrung School</span>
+            </div>
+          </div>
 
 </body>
 </html>
