--- a/personal-info.html
+++ b/personal-info.html
@@ -37,7 +37,7 @@
         </div>
         <div class="about-me">
             <div class="about-me-text3">
-              <span class="typed-text">Adress - Lives in 19/29 Banbung Bangung Chonburi 20170</span>
+              <span class="typed-text">Adress - Lives in 19/29 Banbung Bangung Chonburi</span>
             </div>
           </div>
           <div class="about-me">
