--- a/education.html
+++ b/education.html
@@ -25,15 +25,23 @@
               <li><a href="about-me.html"><span>About Me</span></a></li>
             </ul>
           </nav>
-        <div class="img">
-            <img src="IMG_6470.jpeg">
+
+          <header>
+            <h1>Education</h1>
+        </header>
+        <div class="eds">
+            <h2>Academic Background</h2>
+                <ul>
+                    <li class="ed1">
+                        <h3>Sarasas Withed Chonburi</h3>
+                        <p>Kindergarden/Primary School, 2012-2021</p>
+                    </li>
+                    <li class="ed2">
+                        <h3>Chonradsadornumrung</h3>
+                        <p>Lower Secondary School, 2022-2024</p>
+                    </li>
+                </ul>
         </div>
-        <div class="description">
-            <p>Aerospace Engineering, showcase innovative solutions that drive
-                the future of flight and space exploration into the uncharted tarritory
-                where the possibility is enless</p>
-        </div>
-    </div>
 
 </body>
 </html>
