--- a/about-me.html
+++ b/about-me.html
@@ -25,15 +25,13 @@
               <li><a href="about-me.html"><span>About Me</span></a></li>
             </ul>
           </nav>
-        <div class="img">
-            <img src="IMG_6470.jpeg">
-        </div>
-        <div class="description">
-            <p>Aerospace Engineering, showcase innovative solutions that drive
-                the future of flight and space exploration into the uncharted tarritory
-                where the possibility is enless</p>
+          <div class="img">
+            <img src="IMG_4575.JPEG">
+            <div class="about-me">
+                <h2>About Me!!</h2>
+                <p>Hi there! I’m Pongsapat, a passionate music lover with a particular fondness for Britney Spears, and an avid football fan with a deep appreciation for Tottenham Hotspur. I’m dreaming of exploring the world and settling down in a beautiful city.</p>
+            </div>
         </div>
     </div>
-
 </body>
 </html>
