--- a/achievement.html
+++ b/achievement.html
@@ -26,12 +26,14 @@
             </ul>
         </nav>
         <div class="card">
-            <img src="img_avatar.png" alt="Avatar" style="width:100%">
-            <div class="ci">
-              <h4><b>John Doe</b></h4> 
-              <p>Architect & Engineer</p> 
+            <img src="IMG_6555.JPEG" alt="Avatar" style="width:100%">
             </div>
-        </div>
+        <div class="card">
+            <img src="IMG_6731.JPEG" alt="Avatar" style="width:100%">
+            </div>
+        <div class="card">
+            <img src="IMG_6732.JPEG"Avatar" style="width:100%">
+            </div>
     </div>
 
 </body>
