--- a/education.html
+++ b/education.html
@@ -26,7 +26,7 @@
             </ul>
           </nav>
 
-          <header>
+          <header class="edu">
             <h1>Education</h1>
         </header>
         <div class="eds">
@@ -36,12 +36,12 @@
                         <h3>Sarasas Withed Chonburi</h3>
                         <p>Kindergarden/Primary School, 2012-2021</p>
                     </li>
-                    <li class="ed2">
+                    <li class="ed1">
                         <h3>Chonradsadornumrung</h3>
                         <p>Lower Secondary School, 2022-2024</p>
                     </li>
                 </ul>
         </div>
-
+ 
 </body>
 </html>
