--- a/about-me.html
+++ b/about-me.html
@@ -25,13 +25,13 @@
               <li><a href="about-me.html"><span>About Me</span></a></li>
             </ul>
           </nav>
-          <div class="img">
+        <div class="img">
             <img src="IMG_4575.JPEG">
-            <div class="about-me">
-                <h2>About Me!!</h2>
-                <p>Hi there! I’m Pongsapat, a passionate music lover with a particular fondness for Britney Spears, and an avid football fan with a deep appreciation for Tottenham Hotspur. I’m dreaming of exploring the world and settling down in a beautiful city.</p>
             </div>
-        </div>
+        <div class="about-me">
+                <h2>About Me!!</h2>
+                <p>Hi there! I’m Pongsapat - a 15 years old Thai Lower secondary student, a passionate music lover with a particular fondness for Britney Spears, and an avid football fan with a deep appreciation for Tottenham Hotspur. I’m dreaming of exploring the world and settling down in a beautiful city.</p>
+            </div>
     </div>
 </body>
 </html>
